# WFA_OmpSs-2_FPGA

./: LICENSE  README.md
src/: CMakeLists.txt
src/CPU/: CMakeLists.txt  wfa_edit_alignment_cpu.c
src/FPGA/: CMakeLists.txt  wfa_edit_alignment_fpga.c
